Fix sizing of images on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -24,6 +24,11 @@ footer {
     font-size: 12px;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 ul {
     list-style-type: square;
     padding-left: 2%;
